Fixed border thickness on Firefox

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 	margin-left: 5px;
 	margin-right: 5px;
 	width: 100px;
-
+	border-width: 2px;
 }
 
 .controlRow {
